# streamer

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENCE  README.md  find-colors.cjs  index.html  mise.toml  package.json  release-please-config.json  vite.config.ts
.github/workflows/: build.yml  checks.yml  commit-lint.yml  lint-workflows.yml  release-please.yml
.husky/: pre-commit
.openspec/research/: suggestion-box-codebase-context.md  suggestion-box-external-research.md  suggestion-box-research.md
openspec/changes/chat-message-auto-expire/: design.md  proposal.md  tasks.md
openspec/changes/feature-bundle/: design.md  proposal.md  tasks.md
openspec/changes/github-actions-cicd/: design.md  proposal.md  tasks.md
openspec/changes/global-text-background-opacity/: proposal.md
openspec/changes/simplify-opacity-settings/: design.md  proposal.md  tasks.md
scripts/: ensure-husky.mjs
src/: App.css  App.tsx  log.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  event_log.rs  helix.rs  lib.rs  main.rs  presets.rs  settings.rs  suggestions.rs
src/assets/: default-layout.json  default-settings.json
src/audio/: listener.ts  player.ts  sounds.ts  synth.ts
src/events/: bus.ts  file-logger.ts
src/multimonitor/: index.ts  manager.ts  sync.ts  use-secondary-window.ts
src/stores/: overlay.test.ts  overlay.ts  persistence.ts  twitch.ts
src/twitch/: auth.ts  badges.ts  eventsub.ts  helix.ts  irc.test.ts  irc.ts
src/widgets/: Widget.tsx  registry.ts
(+78 files in other folders)
